@@ -9,7 +9,7 @@ Gem::Specification.new do |s|
 
   s.required_rubygems_version = Gem::Requirement.new(">= 0") if s.respond_to? :required_rubygems_version=
   s.authors = ["Brian McCallister", "Marius Mathiesen", "Thiago Morello"]
-  s.date = %q{2010-03-01}
+  s.date = %q{2010-03-17}
   s.description = %q{Ruby client for the Stomp messaging protocol}
   s.email = ["brianm@apache.org", "marius@stones.com", "morellon@gmail.com"]
   s.executables = ["catstomp", "stompcat"]
